# ChangeLog for media-gfx/optipng
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/optipng/ChangeLog,v 1.33 2007/12/25 16:00:46 phreak Exp $

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing taviso from metadata.xml as per #202471. Assigning to
  maintainer-needed.

  25 Jul 2007; Raúl Porcel <armin76@gentoo.org> optipng-0.5.4.ebuild:
  alpha stable

*optipng-0.5.5 (10 Jul 2007)

  10 Jul 2007; Tavis Ormandy <taviso@gentoo.org> +optipng-0.5.5.ebuild:
  bump #169945

  21 May 2007; Fabian Groffen <grobian@gentoo.org> optipng-0.4.8-r1.ebuild,
  optipng-0.5.4.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  14 Feb 2007; Daniel Gryniewicz <dang@gentoo.org> optipng-0.5.4.ebuild:
  Marked stable on amd64 for bug #165374

  10 Feb 2007; nixnut <nixnut@gentoo.org> optipng-0.5.4.ebuild:
  Stable on ppc wrt bug 165374

  05 Feb 2007; Raúl Porcel <armin76@gentoo.org> optipng-0.5.4.ebuild:
  x86 stable wrt bug 165374

*optipng-0.5.4 (20 Oct 2006)

  20 Oct 2006; Tavis Ormandy <taviso@gentoo.org>
  -files/optipng-0.4.5-more-makefile-options.diff,
  -files/optipng-more-makefile-options.diff, -optipng-0.4.5.ebuild,
  -optipng-0.4.7.ebuild, -optipng-0.4.8.ebuild, +optipng-0.5.4.ebuild,
  -optipng-0.5.ebuild:
  version bump, new version includes manual.
  remove stale ebuilds.

*optipng-0.5 (28 Jan 2006)

  28 Jan 2006; Karol Pasternak <reb@gentoo.org> +optipng-0.5.ebuild:
  Version bump

  30 Oct 2005; Fabian Groffen <grobian@gentoo.org> optipng-0.4.8-r1.ebuild:
  Marked ~ppc-macos (bug #110826)

  10 Oct 2005; Fernando J. Pereda <ferdy@gentoo.org>
  optipng-0.4.8-r1.ebuild:
  stable on alpha wrt bug #108404

  07 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>
  optipng-0.4.8-r1.ebuild:
  Stable on ppc.

*optipng-0.4.8-r1 (07 Oct 2005)

  07 Oct 2005; Tavis Ormandy <taviso@gentoo.org>
  +files/optipng-zlib-security.diff, +optipng-0.4.8-r1.ebuild:
  fix #108404, mark stable on x86