@@ -1,6 +1,6 @@
 DIST optipng-0.5.4.tar.gz 1094572 RMD160 04afd1ef56eb34dc5bba652d9e2bc48a0dc56d61 SHA1 c9d2d2d9b75b8feae71c424224e50f2e3b449050 SHA256 3074f7ebac74683c12b805d58f836400cbec51355fad13f47d46775792ad35ab
 DIST optipng-0.5.5.tar.gz 1109905 RMD160 39e4b0587e4bcc7cb705e329dde35b1f9426b1d0 SHA1 670da3b01da903fa04886e4b6e625648570b3d9c SHA256 79b5c9c728221168e905bc091ef9c64a392278967ccfbbdcff3614ef4f43938f
-EBUILD optipng-0.5.4.ebuild 942 RMD160 f07d0eda71acaedef4c98d410162a325ffa4c671 SHA1 835c620d24bba9ff9433c0a821231d3c3f4ac680 SHA256 13d1de0e1e2fff6d6b965dc9bce0e94ab12780d2410da08770f95fb57ec55f86
-EBUILD optipng-0.5.5.ebuild 941 RMD160 0d652d53419766a5b564e86f056c35073af81d63 SHA1 4ef0713f2ae277260a6b1dcaa7c771a791ece9f6 SHA256 ba1daac74bc6b70b3a1ea0e96ff0d2fe5116e0d727791b9897520743ff865977
-MISC ChangeLog 4376 RMD160 24aca90dfbf828c520dce5f69af4a1740f4ca463 SHA1 d22e71a9d1aeb587554d83abfe51f3c07ba4f0d3 SHA256 9eab79ffff3a96d62726d1ad24889d6f8002111f5d3781e7d5cefb5ba2ce0052
-MISC metadata.xml 401 RMD160 e473f2168cf4e12719dec0327c2bbbdf180ee4c6 SHA1 be76e925a653b2d036d04ce8f2a22f695f344bbf SHA256 01b65f39b017690d097e062156f72380535ae873cff62e94b8e462c06356bc39
+EBUILD optipng-0.5.4.ebuild 954 RMD160 b26d4a2cc25c3e5b3f8342371a435fddf3c8cc12 SHA1 b20149f24667bf927f3545a0094b743c5c568412 SHA256 b9f62bcab0331269ec15f3730a8287458be6c9fe78eed24f0ab67d76d29a4366
+EBUILD optipng-0.5.5.ebuild 915 RMD160 1a9c5fd0282afcfba442cb4186241912a864c407 SHA1 bff5f509938c5f6c4b76d19f89341763c53bf3c9 SHA256 01aca07cff21200376f4eb0d6af35c6c11e4b67ac59b76ec9caaaa17daa2c3fe
+MISC ChangeLog 4534 RMD160 a86b8b4576f197c8334bfe6b1dbbff2924417db9 SHA1 cfdaf968b183c377bf560bb7423cdf8e4fcb3cea SHA256 fbd1ab0480fc3c02eb0c549400c914cc5a455c32ecd247da457bbc37c6799d2f
+MISC metadata.xml 253 RMD160 33155d552badd3133f93e25bfcd82b62d296deb9 SHA1 b30245f00aae656e7a024b2ab4b8ad8e5549250f SHA256 2ddc2634b7e897546998869bcf0803bfbf4940cb75da9e45a2a8f421b4dabfd3
